samples/_failures_safe/1761596182_ff289c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_401bb8e1.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_401bb8e1.c:138:9: error: expected expression at end of input
  138 |         for (int j = 0; j < m->cols; j++)
      |         ^~~
./samples/SAFE/__tmp_401bb8e1.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_401bb8e1.c:138:9: error: expected declaration or statement at end of input
